[tool.poetry]
name = "pan-ai-runtime-security"
version = "0.1.0"
description = "Example scripts for Palo Alto Networks AI Security SDK"
authors = ["cdot65 <calvin@cdot.io>"]
readme = "README.md"
include = ["examples/**/*", "*.md"]
packages = []

[tool.poetry.dependencies]
python = ">=3.9"
pan-aisecurity = "0.4.0.4"
python-dotenv = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.1.5"
mypy = ">=1.5.1"
flake8 = ">=6.1.0"
pytest = ">=7.4.0"
black = ">=23.9.1"

[tool.ruff]
target-version = "py39"
line-length = 127
select = ["E", "F", "W", "I", "N", "UP", "PL", "NPY", "RUF"]
ignore = ["E501"]  # Ignore line too long error since we're handling it with line-length

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore unused imports in __init__.py files
"tests/**/*.py" = ["E501"]  # Ignore line length in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
line-length = 127  # Match line length here as well

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
