[tool.poetry]
name = "pan-ai-runtime-security"
version = "0.1.0"
description = "Example scripts for Palo Alto Networks AI Security SDK"
authors = ["cdot65 <calvin@cdot.io>"]
readme = "README.md"
include = ["examples/**/*", "*.md"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
pan-aisecurity = "0.4.0.4"
python-dotenv = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.1.5"
mypy = ">=1.5.1"
flake8 = ">=6.1.0"
pytest = ">=7.4.0"
black = ">=23.9.1"
isort = ">=5.12.0"

[tool.ruff]
target-version = "py312"
line-length = 127

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "PL", "NPY", "RUF"]
ignore = ["E501"]  # Ignore line too long error since we're handling it with line-length

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore unused imports in __init__.py files
"tests/**/*.py" = ["E501"]  # Ignore line length in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.isort]
profile = "black"
line_length = 127
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip_glob = ["*/__init__.py"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
